--- a/redux-anecdotes/package.json
+++ b/redux-anecdotes/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server -p3001 --watch db.json",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "es-fix": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
